--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@prisma/client": "^4.13.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-validator": "^3.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
